--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
-project(Petl VERSION 0.0.1)
+project(Petl VERSION 0.0.1 
+             DESCRIPTION "A portable expression template library"
+			 LANGUAGES CXX)
 
 # library definition
 add_library(Petl INTERFACE)
@@ -12,22 +14,20 @@ add_library(Petl::Petl ALIAS Petl)
 
 target_compile_features(Petl INTERFACE cxx_std_11)
 
+# create an export from the Petl target 
 install(TARGETS Petl 
-        EXPORT petl-export
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} 
-#        LIBRARY DESTINATION lib
-#        ARCHIVE DESTINATION lib
-#        RUNTIME DESTINATION bin
-#        INCLUDES DESTINATION include
+        EXPORT PetlExport
 )
-install(EXPORT petl-export
-        DESTINATION lib/cmake/Petl
-        FILE PetlTargets.cmake
+
+# generate CMake file that lets other CMake projects import petl targets
+install(EXPORT PetlExport
         NAMESPACE Petl::
+        DESTINATION lib/cmake/Petl
 )
-#install(DIRECTORY include/Petl
-#        DESTINATION include
-#)
+
+# copies include folder during install
+install(DIRECTORY include/Petl
+        DESTINATION include
+)
 
 # should deal with library version...
