fix typo issue for linux

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ if(NOT TARGET Petl::Petl)
 endif()
 
 # target definition
-add_executable(PetlTests tests_source.cpp myVec.h)
+add_executable(PetlTests tests_source.cpp MyVec.h)
 target_link_libraries(PetlTests PRIVATE Petl::Petl)
 #target_link_libraries(PetlTests PRIVATE Petl::Petl GTest::Main)
 
